// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextComponent /> should match snap 1`] = `
.c0 {
  font-size: 2.4rem;
}

<p
  class="c0"
>
  Children
</p>
`;

exports[`<TextComponent /> should match snapshot 1`] = `
.c0 {
  font-size: 2.4rem;
}

<p
  class="c0"
>
  Children
</p>
`;

exports[`<TextComponent /> should render a text 1`] = `
.c0 {
  font-size: 2.4rem;
}

<div>
  <p
    class="c0"
  >
    Children
  </p>
</div>
`;
